--- a/index.html
+++ b/index.html
@@ -40,9 +40,65 @@
     </section>
     <!-- End Top Slider / Carousel -->
 
+<!-- Events section -->
 
+    <section>
+      <div class="events">
+        <div class="event">
+          <img src="images/event.jpg"/>
+        </div>
+        <div class="event">
+          <img src="images/event.jpg"/>
+        </div>
+        <div class="event last">
+          <img src="images/event.jpg"/>
+        </div>
+      </div>  
+    </section>
 
+<!-- End events section -->
 
+<!-- Upcoming News -->
+
+    <section>
+      <div class="upcoming_news">
+        <div class="news left">
+          <img src="images/news.jpg" />
+        </div>
+        <div class="news right">
+          <h3>Upcoming News</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+          <p>
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do e</p>
+          <p>iusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>  
+    </section>
+
+<!-- End of Upcoming News -->
+
+<!-- footer banner -->
+    <section>
+      <div id="footer_banner">
+        <img src="images/footer.jpg">
+      </div>
+    </section>
+
+<!-- end footer banner -->
 
 
 
@@ -54,6 +110,10 @@
 
 
   </div><!-- /#content -->
+
+  <footer>
+    <p>Codecamp 2015 - June</p>
+  </footer>
 
 
 </body>
