--- a/index.html
+++ b/index.html
@@ -19,11 +19,27 @@
         <img src="images/logo.jpg" />
       </div>
       <nav>
-        <ul>
+        <ul id="main-nav">
           <li><a href="#">Nav Item 1</a></li>
-          <li><a href="#">Nav Item 2</a></li>
+          <li class="has-dropdown"><a href="#">Nav Item 2</a>
+            <ul class="dropdown">
+              <li><a href="#">DD Item 1</a></li>
+              <li><a href="#">DD Item 2</a></li>
+              <li><a href="#">DD Item 3</a></li>
+              <li><a href="#">DD Item 4</a></li>
+              <li><a href="#">DD Item 5</a></li>
+            </ul>
+          </li>
           <li><a href="#">Nav Item 3</a></li>
-          <li><a href="#">Nav Item 4</a></li>
+          <li class="has-dropdown"><a href="#">Nav Item 4</a>
+            <ul class="dropdown">
+              <li><a href="#">DD Item 1</a></li>
+              <li><a href="#">DD Item 2</a></li>
+              <li><a href="#">DD Item 3</a></li>
+              <li><a href="#">DD Item 4</a></li>
+              <li><a href="#">DD Item 5</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
     </div>
