Final class Build
Added "social media" icons and dropdown animations

--- a/index.html
+++ b/index.html
@@ -62,12 +62,27 @@
       <div class="events">
         <div class="event">
           <img src="images/event.jpg"/>
+          <div class="overlay left_to_right"></div>
         </div>
         <div class="event">
           <img src="images/event.jpg"/>
+          <div class="overlay right_to_left"></div>
         </div>
         <div class="event last">
           <img src="images/event.jpg"/>
+          <div class="overlay left_to_right"></div>
+        </div>
+        <div class="event">
+          <img src="images/event.jpg"/>
+          <div class="overlay left_to_right"></div>
+        </div>
+        <div class="event">
+          <img src="images/event.jpg"/>
+          <div class="overlay left_to_right"></div>
+        </div>
+        <div class="event last">
+          <img src="images/event.jpg"/>
+          <div class="overlay left_to_right"></div>
         </div>
       </div>  
     </section>
@@ -110,7 +125,13 @@
 <!-- footer banner -->
     <section>
       <div id="footer_banner">
-        <img src="images/footer.jpg">
+          <img src="images/footer.jpg">
+        <div class="circle-container">
+          <img class="circle" src="images/circle.jpg">
+          <img class="circle" src="images/circle2.jpg">
+          <img class="circle" src="images/circle.jpg">
+          <img class="circle" src="images/circle2.jpg">
+        </div>
       </div>
     </section>
 
