--- a/index.html
+++ b/index.html
@@ -61,28 +61,24 @@
     <section>
       <div class="events">
         <div class="event">
+          <div class="overlay"></div>
           <img src="images/event.jpg"/>
-          <div class="overlay left_to_right"></div>
         </div>
         <div class="event">
+          <div class="overlay right-to-left"></div>
           <img src="images/event.jpg"/>
-          <div class="overlay right_to_left"></div>
         </div>
         <div class="event last">
+          <div class="overlay down-to-up"></div>
           <img src="images/event.jpg"/>
-          <div class="overlay left_to_right"></div>
         </div>
         <div class="event">
+          <div class="overlay up-to-down"></div>
           <img src="images/event.jpg"/>
-          <div class="overlay left_to_right"></div>
         </div>
-        <div class="event">
+         <div class="event">
+          <div class="overlay scale"></div>
           <img src="images/event.jpg"/>
-          <div class="overlay left_to_right"></div>
-        </div>
-        <div class="event last">
-          <img src="images/event.jpg"/>
-          <div class="overlay left_to_right"></div>
         </div>
       </div>  
     </section>
