--- a/index.html
+++ b/index.html
@@ -61,24 +61,28 @@
     <section>
       <div class="events">
         <div class="event">
-          <div class="overlay"></div>
           <img src="images/event.jpg"/>
+          <div class="overlay left-to-right"><p>Slide out left to right</p></div>
         </div>
         <div class="event">
-          <div class="overlay right-to-left"></div>
           <img src="images/event.jpg"/>
+          <div class="overlay right-to-left"><p>Slide out right to left</p></div>
         </div>
         <div class="event last">
-          <div class="overlay down-to-up"></div>
           <img src="images/event.jpg"/>
+          <div class="overlay bottom-to-top"><p>Slide up bottom to top</p></div>
         </div>
         <div class="event">
-          <div class="overlay up-to-down"></div>
           <img src="images/event.jpg"/>
+          <div class="overlay half-bottom-to-top"><p>Slide up bottom to top halfway</p></div>
         </div>
          <div class="event">
-          <div class="overlay scale"></div>
           <img src="images/event.jpg"/>
+          <div class="overlay rotate"><p>Rotate in from left</p></div>
+        </div>
+         <div class="event last">
+          <img src="images/event.jpg"/>
+          <div class="overlay expand-from-center"><p>Expand from center</p></div>
         </div>
       </div>  
     </section>
