--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <div class="container">
       <div class="logo ">
-        <img src="/Images/logo.jpg" />
+        <img src="Images/logo.jpg" />
       </div>
       <nav>
         <ul id="main-nav">
@@ -51,7 +51,7 @@
     <!-- Top Slider / Carousel -->
     <section>
       <div id="homepage-hero">
-        <img src="/Images/hero.jpg" />
+        <img src="Images/hero.jpg" />
       </div>
     </section>
     <!-- End Top Slider / Carousel -->
@@ -61,27 +61,27 @@
     <section>
       <div class="events">
         <div class="event">
-          <img src="/Images/event.jpg"/>
+          <img src="Images/event.jpg"/>
           <div class="overlay left-to-right"><p>Slide out left to right</p></div>
         </div>
         <div class="event">
-          <img src="/Images/event.jpg"/>
+          <img src="Images/event.jpg"/>
           <div class="overlay right-to-left"><p>Slide out right to left</p></div>
         </div>
         <div class="event last">
-          <img src="/Images/event.jpg"/>
+          <img src="Images/event.jpg"/>
           <div class="overlay bottom-to-top"><p>Slide up bottom to top</p></div>
         </div>
         <div class="event">
-          <img src="/Images/event.jpg"/>
+          <img src="Images/event.jpg"/>
           <div class="overlay half-bottom-to-top"><p>Slide up bottom to top halfway</p></div>
         </div>
          <div class="event">
-          <img src="/Images/event.jpg"/>
+          <img src="Images/event.jpg"/>
           <div class="overlay rotate"><p>Rotate in from left</p></div>
         </div>
          <div class="event last">
-          <img src="/Images/event.jpg"/>
+          <img src="Images/event.jpg"/>
           <div class="overlay expand-from-center"><p>Expand from center</p></div>
         </div>
       </div>  
@@ -94,7 +94,7 @@
     <section>
       <div class="upcoming_news">
         <div class="news left">
-          <img src="/Images/news.jpg" />
+          <img src="Images/news.jpg" />
         </div>
         <div class="news right">
           <h3>Upcoming News</h3>
@@ -127,10 +127,10 @@
       <div id="footer_banner">
           <img src="Images/footer.jpg">
         <div class="circle-container">
-          <img class="circle" src="/Images/circle.jpg">
-          <img class="circle" src="/Images/circle2.jpg">
-          <img class="circle" src="/Images/circle.jpg">
-          <img class="circle" src="/Images/circle2.jpg">
+          <img class="circle" src="Images/circle.jpg">
+          <img class="circle" src="Images/circle2.jpg">
+          <img class="circle" src="Images/circle.jpg">
+          <img class="circle" src="Images/circle2.jpg">
         </div>
       </div>
     </section>
